--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
               <label for="tab4">Интернет-магазин</label>
               <input id="tab5" type="radio" name="tabs" />
               <label for="tab5">Корпоративный сайт</label>
-              <section id="content1">
-                <div class="services__card">
+              <section id="content1" class="LeftRightBottom">
+                <div class="services__card ">
                   <img
-                    src="img/natours.png"
+                    src="img/site-lp.jpg"
                     alt=""
-                    class="services__card--image"
+                    class="services__card--image "
                   />
                   <div class="services__card--text">
                     <p class="services__card--description">
@@ -168,7 +168,7 @@
               <section id="content2">
                 <div class="services__card">
                   <img
-                    src="img/natours.png"
+                    src="img/site-card.jpg"
                     alt=""
                     class="services__card--image"
                   />
@@ -186,7 +186,7 @@
               <section id="content3">
                 <div class="services__card">
                   <img
-                    src="img/natours.png"
+                    src="img/site-blog.jpg"
                     alt=""
                     class="services__card--image"
                   />
@@ -203,7 +203,7 @@
               <section id="content4">
                 <div class="services__card">
                   <img
-                    src="img/natours.png"
+                    src="img/site-store.jpg"
                     alt=""
                     class="services__card--image"
                   />
@@ -222,7 +222,7 @@
               <section id="content5">
                 <div class="services__card">
                   <img
-                    src="img/natours.png"
+                    src="img/site-corp.png"
                     alt=""
                     class="services__card--image"
                   />
