--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <span class="english"></span>
             </p>
 
-            <div class="tabs black ">
+            <div class="tabs black">
               <input id="tab1" type="radio" name="tabs" checked />
               <label for="tab1">Landing page</label>
               <input id="tab2" type="radio" name="tabs" />
@@ -148,7 +148,7 @@
               <label for="tab4">Интернет-магазин</label>
               <input id="tab5" type="radio" name="tabs" />
               <label for="tab5">Корпоративный сайт</label>
-              <section id="content1" class="LeftRightBottom">
+              <section id="content1" class="">
                 <div class="services__card ">
                   <img
                     src="img/site-lp.jpg"
